<resources>
    <!--General-->
    <string name="app_name">Meal Tracker</string>
    <string name="emailEdit">Email</string>
    <string name="passwordEdit">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="signOutLabel">Sign Out</string>
    <string name="signInLabel">Sign in with your Google Account</string>
    <string name="ok">Ok</string>
    <string name="no_internet">No internet connection</string>
    <string name="sign_msg">Connect to internet and sign in.</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Location service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="logo">App logo</string>

    <!--Main screen-->
    <string name="addMeal">Add Meal</string>
    <string name="history">History</string>
    <string name="calendar">Meals in Google\n Calendar</string>

    <!--Add Meal screen-->
    <string name="screenNameAddMeal">Add Meal</string>
    <string name="typeLabel">Type of food</string>
    <string name="typeLabelSpinner">Type of food dropdown</string>
    <string name="description">Description</string>
    <string name="edt_description">Description field</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="edt_location">Location field</string>
    <string name="customizable">Customizable Fields</string>
    <string name="addBtnString">Add</string>
    <string name="checboxGoogle">Add to Google Calendar</string>
    <string name="saveBtnString">Save</string>
    <string name="settings">Settings</string>
    <string name="missing_title">Required field is empty</string>
    <string name="missing_fields">Fill Description, Date and Time fields and click on Save again</string>

    <!--Settings-->
    <string name="confirmColorBtn">Cofirm</string>
    <string name="removeType">Remove type</string>
    <string name="removeBtnString">Remove</string>
    <string name="custFields">Customizable Fields</string>
    <string name="addCustLabel">Add new Customizable Fields</string>
    <string name="custField">Custom field</string>
    <string name="color_spinner">Color dropdown</string>
    <string name="confirmColorSpeak">Confirm color button</string>
    <string name="editTextType">Field for adding food type</string>
    <string name="editTextCust">Field for adding custom field</string>
    <string name="add_btn">Add button</string>
    <string name="rmv_btn">Remove button</string>
    <string name="custom_spinner">Custom meal dropdown</string>


    <!--History-->
    <string name="recentMeals">Recent Meals</string>
    <string name="title_activity_history">History</string>
    <string name="icon_calendar">Calendar</string>
    <string name="no_meals">No meals are recorded</string>

    <!-- Meal Detail -->
    <string name="toolbar_name">Meal Detail</string>
    <string name="icon_pen">Edit</string>
    <string name="edit_meal">Edit Meal</string>

    <!--Calendar-->
    <string name="google_calendar">Google Calendar</string>
    <string name="google_history">Google Calendar History</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="btn_text">Get Meals</string>

    <!--Meal Item-->
    <string name="trash">Delete meal</string>
    <string name="mail">Send/receive meal</string>

    <!--Toasts-->
    <string name="welcome">Welcome </string>
    <string name="exit">Please click BACK again to exit</string>
    <string name="field_added">Field was added</string>
    <string name="meal_added">Meal was added</string>
    <string name="calling_api">Calling Google Calendar API ...</string>
    <string name="appname">MealTracker</string>
    <string name="following_error">The following error occurred:
</string>
    <string name="req_cancel">Request cancelled.</string>
    <string name="select_time">Select time</string>
    <string name="onsuccess">onSuccess:null</string>
    <string name="contacts_req">This app needs to access your Google account (via Contacts).</string>
    <string name="location_req">This app needs to access your Location.</string>
    <string name="json_parse">Could not parse malformed JSON: "</string>
    <string name="meals_for">Meals for:  </string>
    <string name="no_meals_day">No meals are recorded for day
</string>
    <string name="color_updated">Color was updated</string>
    <string name="type_added">Food type was added</string>
    <string name="type_removed">Food type was removed</string>
    <string name="cust_added">Custom field was added</string>
    <string name="cust_removed">Custom field was removed</string>


</resources>
