<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

       <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/add_meal_padding"
        tools:context="com.riso.android.mealtracker.AddMealFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeLabel"
            android:contentDescription="@string/typeLabel"
            android:theme="@style/AddMeal" />

        <Spinner
            android:id="@+id/typeFoodSpinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/typeLabelSpinner"
            android:layout_margin="@dimen/add_margin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:contentDescription="@string/description"
            android:theme="@style/AddMeal" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_height"
            android:background="@color/editText"
            android:contentDescription="@string/edt_description"
            android:gravity="top"
            android:paddingBottom="@dimen/add_margin" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginBottom="@dimen/settings_padding"
            android:layout_marginTop="@dimen/settings_padding"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:contentDescription="@string/date"
                android:hint="@string/date"
                android:padding="@dimen/settings_padding" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:contentDescription="@string/time"
                android:hint="@string/time"
                android:padding="@dimen/settings_padding" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:contentDescription="@string/location"
            android:theme="@style/AddMeal" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:contentDescription="@string/edt_location"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_marginBottom="@dimen/settings_padding"
            android:layout_marginTop="@dimen/settings_padding"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customizable"
            android:contentDescription="@string/customizable"
            android:theme="@style/AddMeal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_padding"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/settings_padding">

            <Spinner
                android:id="@+id/customSpinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/custom_height"
                android:layout_weight="3"
                android:focusable="false"
                android:contentDescription="@string/custom_spinner"
                android:padding="@dimen/settings_padding" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/custom_height"
                android:layout_weight="1"
                android:focusable="false"
                android:contentDescription="@string/add_btn"
                android:padding="@dimen/settings_padding"
                android:text="@string/addBtnString" />

        </LinearLayout>

        <EditText
            android:id="@+id/editCusotom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_height"
            android:contentDescription="@string/custField"
            android:background="@color/editText"
            android:gravity="top" />



        <CheckBox
            android:id="@+id/calChckbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/settings_padding"
            android:paddingTop="@dimen/menu_item_padding"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:checked="false"
            android:contentDescription="@string/checboxGoogle"
            android:text="@string/checboxGoogle" />

           <Button
               android:id="@+id/saveBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:theme="@style/Button"
               android:layout_alignParentBottom="true"
               android:background="@color/colorPrimary"
               android:contentDescription="@string/saveBtnString"
               android:text="@string/saveBtnString"/>

    </LinearLayout>

</ScrollView>