<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mi_marginh"
    android:background="@drawable/edge"
    android:padding="@dimen/mi_padding">

    <TextView
        android:id="@+id/titleItem"
        android:layout_width="@dimen/mi_title_width"
        android:layout_height="@dimen/detail_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/mi_marginh"
        android:paddingBottom="@dimen/add_margin"
        android:contentDescription="@string/typeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/dateItem"
        android:layout_width="@dimen/mi_date_width"
        android:layout_height="@dimen/detail_margin"
        android:contentDescription="@string/date"
        android:paddingBottom="@dimen/add_margin"
        app:layout_constraintStart_toStartOf="@+id/titleItem"
        app:layout_constraintTop_toBottomOf="@+id/titleItem"
        tools:text="Date" />

    <TextView
        android:id="@+id/tiemItem"
        android:layout_width="@dimen/mi_date_width"
        android:layout_height="@dimen/detail_margin"
        android:layout_marginStart="@dimen/nomeal_margin"
        android:paddingBottom="@dimen/add_margin"
        android:contentDescription="@string/time"
        app:layout_constraintStart_toEndOf="@+id/dateItem"
        app:layout_constraintTop_toTopOf="@+id/dateItem"
        tools:text="Time" />

    <TextView
        android:id="@+id/locationItem"
        android:layout_width="@dimen/mi_location_width"
        android:layout_height="@dimen/detail_margin"
        android:paddingBottom="@dimen/add_margin"
        android:contentDescription="@string/location"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="@+id/dateItem"
        app:layout_constraintTop_toBottomOf="@+id/dateItem"
        tools:text="Location" />

    <TextView
        android:id="@+id/descriptionItem"
        android:layout_width="@dimen/mi_location_width"
        android:layout_height="@dimen/detail_margin"
        android:contentDescription="@string/description"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/locationItem"
        app:layout_constraintTop_toBottomOf="@+id/locationItem"
        tools:text="Description" />

    <ImageButton
        android:id="@+id/mailItem"
        android:layout_width="@dimen/mi_icon_width"
        android:layout_height="@dimen/mi_icon_height"
        android:layout_marginEnd="@dimen/line"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mail" />

    <ImageButton
        android:id="@+id/trahsItem"
        android:layout_width="@dimen/mi_icon_width"
        android:layout_height="@dimen/mi_icon_height"
        android:layout_marginEnd="@dimen/line"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_removed" />

</android.support.constraint.ConstraintLayout>