<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riso.android.mealtracker.DetailMealFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detailDate"
                android:layout_width="@dimen/detail_date_width"
                android:layout_height="@dimen/detail_date_height"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:textSize="@dimen/menu_item_text"
                android:contentDescription="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Date" />

            <TextView
                android:id="@+id/detailTIme"
                android:layout_width="@dimen/detail_date_width"
                android:layout_height="@dimen/detail_date_height"
                android:layout_marginEnd="@dimen/nomeal_margin"
                android:layout_marginStart="@dimen/history_padding"
                android:textSize="@dimen/menu_item_text"
                android:contentDescription="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toEndOf="@+id/detailDate"
                app:layout_constraintTop_toTopOf="@+id/detailDate"
                tools:text="Time" />

            <TextView
                android:id="@+id/detailLocation"
                android:layout_width="@dimen/detail_location_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/nomeal_margin"
                android:layout_marginTop="@dimen/history_padding"
                android:textSize="@dimen/menu_item_text"
                android:contentDescription="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detailDate"
                app:layout_constraintTop_toBottomOf="@+id/detailDate"
                tools:text="Location" />

            <TextView
                android:id="@+id/detailDescTV"
                android:layout_width="@dimen/detail_desc_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_padding"
                android:text="@string/description"
                android:contentDescription="@string/description"
                android:textColor="@color/textgray"
                app:layout_constraintStart_toStartOf="@+id/detailLocation"
                app:layout_constraintTop_toBottomOf="@+id/detailLocation" />

            <TextView
                android:id="@+id/detailDescription"
                android:layout_width="@dimen/detail_location_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/nomeal_margin"
                android:layout_marginTop="@dimen/nomeal_margin"
                android:contentDescription="@string/edt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detailDescTV"
                app:layout_constraintTop_toBottomOf="@+id/detailDescTV"
                tools:text="User's text" />

            <TextView
                android:id="@+id/detailCustFields"
                android:layout_width="@dimen/detail_date_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_item_padding"
                android:text="@string/custFields"
                android:contentDescription="@string/custFields"
                android:textColor="@color/textgray"
                app:layout_constraintStart_toStartOf="@+id/detailDescription"
                app:layout_constraintTop_toBottomOf="@+id/detailDescription" />

            <Spinner
                android:id="@+id/detailSpinner"
                android:layout_width="@dimen/detail_spinner_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nomeal_margin"
                android:contentDescription="@string/custom_spinner"
                app:layout_constraintStart_toStartOf="@+id/detailCustFields"
                app:layout_constraintTop_toBottomOf="@+id/detailCustFields" />

            <TextView
                android:id="@+id/detailCustomfields"
                android:layout_width="@dimen/detail_location_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nomeal_margin"
                android:layout_marginEnd="@dimen/nomeal_margin"
                android:layout_marginTop="@dimen/history_padding"
                android:paddingBottom="@dimen/detail_margin"
                tools:text="TextView"
                android:contentDescription="@string/editTextCust"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detailSpinner"
                app:layout_constraintTop_toBottomOf="@+id/detailSpinner" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>
