<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.riso.android.mealtracker.MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@mipmap/logo" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="@dimen/signin_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/signin_button_margin"
        android:text="@string/signInButton"
        android:contentDescription="@string/signInButton"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/signInHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogo"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/signin_hint_padding"
        android:layout_marginBottom="@dimen/signin_hint_marginBot"
        android:layout_marginStart="@dimen/signin_hint_marginStart"
        android:textStyle="bold"
        android:contentDescription="@string/signInLabel"
        android:text="@string/signInLabel" />


</RelativeLayout>
